--- a/speakers.html
+++ b/speakers.html
@@ -2329,6 +2329,110 @@
                 </div>
               </div>
             </div>
+            <!-- Speaker - Ivy Hesse -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="capital-markets">
+                <div class="speaker-image">
+                  <img src="img/speakers/ivy_hesse_2_-b4bc6.png" alt="Ivy Hesse" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Ivy Hesse</h3>
+                  <h4>Capital Markets Consultant | CFA</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalIvyHesse"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
+            <!-- Speaker - Collen Tapfumaneyi -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="ceo">
+                <div class="speaker-image">
+                  <img src="img/speakers/COLLEN.jpg" alt="Collen Tapfumaneyi" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Collen Tapfumaneyi</h3>
+                  <h4>Group Chief Executive Officer, Escrow Group</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalCollenTapfumaneyi"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
+            <!-- Speaker - Sunil Benimadhu -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="ceo">
+                <div class="speaker-image">
+                  <img src="img/speakers/Sunil BENIMADHU.jpg" alt="Sunil Benimadhu" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Sunil Benimadhu</h3>
+                  <h4>Chief Executive, SEM</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalSunilBenimadhu"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
+            <!-- Speaker - Pedro Frederico Cossa -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="ceo">
+                <div class="speaker-image">
+                  <img src="img/speakers/Pedro Frederico Cossa - Profile´s Pic.jpg" alt="Pedro Frederico Cossa" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Pedro Frederico Cossa</h3>
+                  <h4>President, Board of Directors, BVM S.A.</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalPedroFredericoCossa"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </section>
@@ -5872,6 +5976,231 @@
                     </p>
                     <p>
                       He has held various leadership positions while working with different reputable organizations in the past including TradeMark East Africa, Rwanda Private Sector Federation, Commercial Bank of Rwanda (BCR), Rwanda Investment Export Promotion Agency (RIEPA-now known as Rwanda Development Board). He holds several positions of responsibility in Boards of corporates and parastatals.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Ivy Hesse -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalIvyHesse"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/ivy_hesse_2_-b4bc6.png"
+                    alt="Ivy Hesse"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Ivy Hesse</h3>
+                  <h4>Capital Markets Consultant | CFA</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Ivy Hesse is a seasoned investment professional with over 18 years of experience in key roles in Capital Markets in Ghana and Rwanda. Throughout her career, Ivy has been a staunch advocate for the development of resident capital market institutions and the creation of sustainable wealth across Sub-Saharan Africa.
+                    </p>
+                    <p>
+                      She has worked with prominent investment industry institutions such as Databank Groups and SEM associates in Ghana. In her recent eleven years as a Capital Market consultant, Ivy served as the Technical Consultant engaged with MINECOFIN for the operationalization of the Rwanda Stock Exchange Investment Clinic Secretariat.
+                    </p>
+                    <p>
+                      Currently, she is a member of the CFA Institute Africa Advocacy Council. Ivy holds the designation of Chartered Financial Analyst (CFA), a Certificate in Investment Performance Measurement (CIPM), and Bachelor's degrees in Economic Major and Business Geography.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Collen Tapfumaneyi -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalCollenTapfumaneyi"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/COLLEN.jpg"
+                    alt="Collen Tapfumaneyi"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Collen Tapfumaneyi</h3>
+                  <h4>Group Chief Executive Officer, Escrow Group</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Collen Tapfumaneyi is the founder and Group Chief Executive Officer of the Escrow Group comprising Financial Securities Exchange, Corpserve Registrars and Escrow Systems. He holds an MSc. Finance, MBA, and ACCA Dip FM qualifications.
+                    </p>
+                    <p>
+                      He was previously CEO of Custody and Registrar Services Limited (Kenya) following the acquisition of the company from Barclays Bank of Kenya. Collen has a long and successful track record in the capital markets and as a provider of capital markets and financial services solutions in Africa.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Sunil Benimadhu -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalSunilBenimadhu"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Sunil BENIMADHU.jpg"
+                    alt="Sunil Benimadhu"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Sunil Benimadhu</h3>
+                  <h4>Chief Executive, SEM</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Sunil Benimadhu joined the SEM as Chief Executive in May 1998. He was appointed Executive Director on the SEM's Board in October 2008. He holds an MBA in Finance and Investment from the University of Illinois, United States. He also holds a D.E.A. in Development Economics and a Maîtrise in Macro-Economics from the University of Aix-Marseille, France.
+                    </p>
+                    <p>
+                      Sunil has been the Chairman of Global Finance Mauritius from July 2014 to October 2020 and a director of Mauritius Finance from November 2020 to April 2024. He has been a director on the Board of the World Federation of Exchanges (WFE), an association of the World's leading Stock Exchanges from October 2014 to September 2021.
+                    </p>
+                    <p>
+                      Sunil was the President of the African Securities Exchanges Association (ASEA) an association of 25 Exchanges operating on the continent, from August 2010 to November 2014. From 2002 to 2005, he was a member of the Executive Committee of the South Asian Federation of Exchanges (SAFE), which comprises twelve Stock Exchanges of the South Asian region. From April 2001 to February 2004, he chaired the SADC Committee of Stock Exchanges (COSSE), an association of stock exchanges which includes ten exchanges of the Southern African region.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Pedro Frederico Cossa -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalPedroFredericoCossa"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Pedro Frederico Cossa - Profile´s Pic.jpg"
+                    alt="Pedro Frederico Cossa"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Pedro Frederico Cossa</h3>
+                  <h4>President, Board of Directors, BVM S.A.</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Pedro Frederico Cossa is a Development Economics Specialist with a degree in Management and Finance from the Higher Institute of Information and Communication Technologies. He also holds certifications in programs such as Financial Literacy from the University of Pretoria, South Africa, and Financial Markets from the Banking Training Institute of Portugal.
+                    </p>
+                    <p>
+                      He has served as the Chief Finance Officer of the Municipal Company for Mobility and Parking (EMME). Additionally, he is the President of the Mozambique Association of Economists (AMECON). Pedro Cossa was also a Member of Parliament in the Assembly of the Republic from 2015 to 2020.
+                    </p>
+                    <p>
+                      A dedicated professional of the Mozambique Stock Exchange (BVM) since 2009, he has held various leadership positions, including Deputy Director of Operations. Currently, he serves as the President of the Board of Directors of BVM, S.A.
                     </p>
                   </div>
                 </div>
