--- a/speakers.html
+++ b/speakers.html
@@ -2433,6 +2433,32 @@
                 </div>
               </div>
             </div>
+            <!-- Speaker - Michèle Carlsson -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="technology">
+                <div class="speaker-image">
+                  <img src="img/speakers/Michelle-Carlsson-320x352.jpg" alt="Michèle Carlsson" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Michèle Carlsson</h3>
+                  <h4>Managing Director, Nasdaq Middle East & Africa</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalMicheleCarlsson"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </section>
@@ -6201,6 +6227,63 @@
                     </p>
                     <p>
                       A dedicated professional of the Mozambique Stock Exchange (BVM) since 2009, he has held various leadership positions, including Deputy Director of Operations. Currently, he serves as the President of the Board of Directors of BVM, S.A.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Michèle Carlsson -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalMicheleCarlsson"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Michelle-Carlsson-320x352.jpg"
+                    alt="Michèle Carlsson"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Michèle Carlsson</h3>
+                  <h4>Managing Director, Nasdaq Middle East & Africa</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Michèle Carlsson serves as the Managing Director of Nasdaq in the Middle East and Africa and sits as non-executive member on the board of directors at the Swedish Business Council. Michèle has been representing Nasdaq in the Middle East since 2009, where she is focused on bringing the capacity of services and expertise of Nasdaq to the Middle East and Africa, making sure that clients receive the attention and care that they deserve.
+                    </p>
+                    <p>
+                      Michèle joined the technology arm of the NASDAQ OMX in 1998 where she was assigned to lead development teams with a focus on technology. Her expansive portfolio includes the delivery of the Nordic Exchange Alliance, bringing Trading, Clearing, CSD and Surveillance solutions to the Australian Stock Exchange, the Saudi Tadawul Exchange and the Egypt Stock Exchange amongst other marketplaces. Michèle relocated from Stockholm to Cairo in 2006, where she served as the CTO of EGID, the joint venture between Nasdaq and the Egyptian Exchange (EGX).
+                    </p>
+                    <p>
+                      Michèle brings over 30 years of experience in the fintech space and is committed to the development and growth of Middle Eastern and African capital markets. Michèle has always held a client-centric approach, ensuring Nasdaq's customers receive the support they need to thrive. In her current role, she is focused on creating new opportunities for markets everywhere, within and beyond the capital markets.
                     </p>
                   </div>
                 </div>
