--- a/speakers.html
+++ b/speakers.html
@@ -2459,6 +2459,32 @@
                 </div>
               </div>
             </div>
+            <!-- Speaker - Ms. Thapelo Moribame -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="capital-markets">
+                <div class="speaker-image">
+                  <img src="img/speakers/Thapelo M.jpeg" alt="Ms. Thapelo Moribame" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Ms. Thapelo Moribame</h3>
+                  <h4>Head of Market Development, Botswana Stock Exchange</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalThapeloMoribame"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </section>
@@ -6284,6 +6310,66 @@
                     </p>
                     <p>
                       Michèle brings over 30 years of experience in the fintech space and is committed to the development and growth of Middle Eastern and African capital markets. Michèle has always held a client-centric approach, ensuring Nasdaq's customers receive the support they need to thrive. In her current role, she is focused on creating new opportunities for markets everywhere, within and beyond the capital markets.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Ms. Thapelo Moribame -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalThapeloMoribame"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Thapelo M.jpeg"
+                    alt="Ms. Thapelo Moribame"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Ms. Thapelo Moribame</h3>
+                  <h4>Head of Market Development, Botswana Stock Exchange | WFE Top 20 Woman Leader 2025</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      An astute leader with a strong record of transformation, Moribame, who serves as Head of Market Development at the Botswana Stock Exchange, is a distinguished economist and financial markets expert with over 18 years of experience spanning capital markets development, international trade, SME financing, business development, Marketing and policy reform.
+                    </p>
+                    <p>
+                      She holds a Master of Commerce in Economics from Stellenbosch University, where her research focused on mineral rent utilization for economic diversification in Botswana. She also has a Bachelor of Arts in Social Sciences Degree specializing in Economics and Public Administration from the University of Botswana, she has also studied International Trade and the Multilateral Trading System at the United Nations University in Tokyo, Japan.
+                    </p>
+                    <p>
+                      Beyond her role at the BSE, Moribame is a sought-after Pan-African thought leader, serving on the board of Nabo Capital (Kenya) and contributing to the African Securities Exchanges Association (ASEA) Policy & Regulatory Working Group. Her recent appointment to the United Nations Sustainable Stock Exchanges Advisory Group on SMEs and Sustainability (2024) further underscores her role in shaping global policy on inclusive and sustainable finance.
+                    </p>
+                    <p>
+                      Moribame's recognition by the World Federation of Exchanges (WFE), as one of the WFE Top 20 Women Leaders for 2025, acknowledges her excellence, leadership, and transformative impact. Ms. Moribame has a strong commercial focus and is a firm believer of inclusion and diversity. She has championed several partnerships across different stakeholders.
                     </p>
                   </div>
                 </div>
