--- a/speakers.html
+++ b/speakers.html
@@ -2485,6 +2485,32 @@
                 </div>
               </div>
             </div>
+            <!-- Speaker - Robert Mathu -->
+            <div class="col-lg-3 col-md-6 col-sm-6">
+              <div class="speaker-card" data-category="capital-markets">
+                <div class="speaker-image">
+                  <img src="img/speakers/Robert M.jpeg" alt="Robert Mathu" />
+                  <div class="speaker-overlay">
+                    <div class="speaker-social">
+                      <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-info">
+                  <h3>Robert Mathu</h3>
+                  <h4>Consulting CEO, Burundi Securities Exchange | Principal Consultant, Blockweb Africa</h4>
+                  <p></p>
+                  <a
+                    href="#"
+                    class="speaker-btn"
+                    data-toggle="modal"
+                    data-target="#speakerModalRobertMathu"
+                  >
+                    View Profile
+                  </a>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </section>
@@ -6370,6 +6396,63 @@
                     </p>
                     <p>
                       Moribame's recognition by the World Federation of Exchanges (WFE), as one of the WFE Top 20 Women Leaders for 2025, acknowledges her excellence, leadership, and transformative impact. Ms. Moribame has a strong commercial focus and is a firm believer of inclusion and diversity. She has championed several partnerships across different stakeholders.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Speaker Modal - Robert Mathu -->
+    <div
+      class="modal fade speaker-modal"
+      id="speakerModalRobertMathu"
+      tabindex="-1"
+      role="dialog"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Speaker Profile</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="speaker-modal-image">
+                  <img
+                    src="img/speakers/Robert M.jpeg"
+                    alt="Robert Mathu"
+                  />
+                </div>
+                <div class="speaker-modal-social">
+                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="col-md-8">
+                <div class="speaker-modal-info">
+                  <h3>Robert Mathu</h3>
+                  <h4>Consulting CEO, Burundi Securities Exchange | Principal Consultant, Blockweb Africa</h4>
+                  <div class="speaker-modal-bio">
+                    <p>
+                      Robert Mathu is a capital market professional with over 30 years in the securities industry. He started his career in 1990 at the Nairobi Securities Exchange, and in 1997, went on to start new stock exchanges across Eastern African countries. He has been involved in setting up most of the stock exchanges and some capital market regulators in the EAC, including Uganda, Tanzania, Rwanda and Burundi.
+                    </p>
+                    <p>
+                      He has done some work in the Caribbean Islands. He has consulted on capital markets with Governments', Ministries of Finance, Central Banks, capital market regulators, and commercial banks. He has also operated as a stockbroker and investment banker over the years.
+                    </p>
+                    <p>
+                      He is currently the consulting CEO of the Burundi securities Exchange and Principal Consultant at Blockweb Africa, a capital market consulting firm based in Nairobi.
                     </p>
                   </div>
                 </div>
